# unified-researchdata-mcp

./: .env.example  .gitmodules  CHANGELOG.md  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  econversion-entrypoint.sh  econversion.Dockerfile
datatagger-proxy/: Dockerfile  pyproject.toml  requirements.txt
datatagger-proxy/src/datatagger_proxy/: __main__.py  app.py  jwt_token.py
docs/: duckdns-setup.md
econversion/: .gitignore  Dockerfile
elab-app/: Dockerfile
elabmcp-proxy/: Dockerfile  config.dynamic.yml  pyproject.toml  requirements.txt  shared_worker.R
elabmcp-proxy/src/elabmcp_proxy/: __init__.py  __main__.py  app.py  jwt_token.py  r_worker.py  session.py
elabmcp-proxy/tests/: conftest.py  test_app.py  test_docker_services.py  test_session.py
instrument-data/: instrument_ingest.py  mock_trios_run.py  nomad_processor.py  startup.sh
instrument-data/instrument_data/: __init__.py  elabftw_client.py  entrypoint.py  parser.py  processor.py  pyproject.toml  schema.py
proespm-app/: Dockerfile  main.py
web/: index.html
