[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elabmcp-proxy"
version = "0.1.0"
description = "Multi-user auth-proxy for elabrmcp — per-user R subprocess spawning"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "docker: marks tests that require Docker Compose services (deselect with '-m \"not docker\"')",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27",
]

[project.scripts]
elabmcp-proxy = "elabmcp_proxy.__main__:main"
